--- a/index.html
+++ b/index.html
@@ -175,16 +175,16 @@
 <div class="container-fluid padding">
 	<div class="row text-center">
 		<div class="col-sm-6 col-md-3">
-			<img class="gif" src="img/gif/panda.gif">
+			<img class="gif" src="img/gif/guy.gif">
 		</div>
 		<div class="col-sm-6 col-md-3">
-			<img class="gif" src="img/gif/poo.gif">
+			<img class="gif" src="img/gif/migi.gif">
 		</div>
 		<div class="col-sm-6 col-md-3">
-			<img class="gif" src="img/gif/unicorn.gif">
+			<img class="gif" src="img/gif/tenor.gif">
 		</div>
 		<div class="col-sm-6 col-md-3">
-			<img class="gif" src="img/gif/chicken.gif">
+			<img class="gif" src="img/gif/parasyte.webp">
 		</div>
 	</div>
 </div>	
