--- a/index.html
+++ b/index.html
@@ -175,16 +175,16 @@
 <div class="container-fluid padding">
 	<div class="row text-center">
 		<div class="col-sm-6 col-md-3">
-			<img class="gif" src="img/gif/guy.gif">
+			<img class="gif" >
 		</div>
 		<div class="col-sm-6 col-md-3">
-			<img class="gif" src="img/gif/migi.gif">
+			<img class="gif" >
 		</div>
 		<div class="col-sm-6 col-md-3">
-			<img class="gif" src="img/gif/tenor.gif">
+			<img class="gif">
 		</div>
 		<div class="col-sm-6 col-md-3">
-			<img class="gif" src="img/gif/parasyte.webp">
+			<img class="gif">
 		</div>
 	</div>
 </div>	
@@ -231,8 +231,8 @@
 			<div class="card">
 				<img class="card-img-top" src="img/team3.png">
 				<div class="card-body">
-					<h4 class="card-title">Alexander Magwaer</h4>
-					<p class="card-text"> He is like Crys 28, just without Bachelor</p>
+					<h4 class="card-title">Vanea Ciubuc</h4>
+					<p class="card-text">He got money</p>
 						<a href="#" class="btn btn-outline-secondary">See profile</a>
 				</div>
 			</div>
