--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 <div class="container-fluid padding">
 	<div class="row text-center">
 		<div class="col-sm-6 col-md-3">
-			<img class="gif" >
+			<img class="img" >
 		</div>
 		<div class="col-sm-6 col-md-3">
 			<img class="gif" >
